--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "projeto",
+  "name": "projetoback",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "swagger": "node ./swagger.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@expo-google-fonts/montserrat-alternates": "^0.4.1",
-    "@fontsource-variable/montserrat": "^5.2.8",
-    "@fortawesome/fontawesome-svg-core": "^7.1.0",
-    "@react-native-vector-icons/octicons": "^20.4.0",
-    "@react-navigation/drawer": "^7.7.3",
-    "@react-navigation/native": "^7.1.20",
-    "@react-navigation/native-stack": "^7.6.3",
-    "expo": "~54.0.24",
-    "expo-font": "~14.0.9",
-    "expo-secure-store": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-worklets": "0.5.1"
+    "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1"
   },
-  "private": true
+  "keywords": [],
+  "type": "commonjs",
+  "devDependencies": {
+    "nodemon": "^3.1.11",
+    "swagger-autogen": "^2.23.7"
+  },
+  "description": ""
 }
