--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/montserrat-alternates": "^0.4.1",
     "@fontsource-variable/montserrat": "^5.2.8",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-vector-icons/octicons": "^20.4.0",
     "@react-navigation/drawer": "^7.7.3",
     "@react-navigation/native": "^7.1.20",
@@ -22,10 +23,13 @@
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-date-picker": "^5.0.13",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-worklets": "0.5.1"
   },
   "private": true
