--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@react-navigation/drawer": "^7.7.3",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.24",
     "expo-font": "~14.0.9",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "path": "^0.12.7",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-config": "^1.6.0",
     "react-native-date-picker": "^5.0.13",
+    "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
